adding changes for remote editing

--- a/index.html
+++ b/index.html
@@ -52,20 +52,23 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-heading text-xxl">
-                    An experienced dog watcher for YOU!
+                    My Story...
                 </h1>
                 <p class="hero-text">
-                    With over 10 years of experience, working with several animal shelters, 
-                    it goes without saying, leaving your dogs with her is a no brainer.
-                    She is a repsonsible dog owner for her whole life she knows dogs and loves them to the fullest.
+                    I have loved and owned dogs all my life. In 2024, I lost my beloved Tito, a rescue, wh I loved for over 12 years.
+                    I retired in October 2024, alone with my husband. Since we are planning on travelling over the next few years, we have decided not to adopt
+                    another pet at the moment. However, we both miss having a dog to love, cuddle, and play with. What started out as watching a friend's pups while she
+                    was away, grew into a small business.
                 </p>
                 <p class="hero-text">
-                    Her house is set up specifically to give your dog the best time possible while you are away.
-                    With a large at home space, provided water and food bowls, beds, and toys! 
-                    Also with daily dedicated play time if your dog enjoys that! <br>
+                    With over 10 years experience volunteering at local animal shelters, you can feel secure leaving your dog(s) with me.
+                    I only host one dog family at a time. All my love and attention will be for your dog(s) only. I do my best to accomodate
+                    your dog's schedule and needs, so they feel as cofortable as possible in my home while you are away. I have a large
+                    fenced in backyard where they are never left unattended. I will take them on walks and provide daily play time if your dog enjoys that! <br>
                 </p>
                 <p class="hero-text">
-                    Enjoy your time away and have peace of mind when you leave your furry friends with Lee!
+                    Let me know if your dog has any special needs or habits, so I am able to accomodate theur individul personalities.
+                    Dogs are as unique as people and loved for their individuality.
                 </p>
             </div>
             <img src="images/instagram.png" alt="Dog and walker" class="hero-image">
@@ -76,7 +79,7 @@
      <section class="calendar bg-black" id="availability">
         <div class="container-sm">
             <h2 class="calendar-heading text-xl text-center">
-                Check her availability below to see what days work for you!
+                See Calendar for Available/Unavailable Days - Please contact to confirm availability!
             </h2>
             <div class="calendar-content">
                     <iframe src="https://calendar.google.com/calendar/embed?src=alvyncostello31%40gmail.com&ctz=America%2FNew_York" class="calendar-google" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
@@ -88,38 +91,48 @@
       <section class="testimonials bg-dark" id="testimonials">
         <div class="container">
             <h3 class="testimonials-heading text-xl">
-                Don't just take my word for it, check out reviews from these happy families!
+                Testimonials
             </h3>
             <div class="testimonials-grid">
 
                 <div class="card">
                     <p>
-                        "Our dog Happy is pretty difficult to work with but loves staying with Lee. 
-                        Doesn't matter if its for a quick weekend or extended vacation, our minds 
-                        are always at ease when our dog stays with her."
+                        "Our dog Happy is pretty difficult to work with and isnt friendly with some people so its hard to find a good sitter.
+                        This isn't a problem with Lee. Happy loves staying with her. And it doesn't matter if its for a quick weekend or extended vacation, 
+                        our minds are always at ease when our dog stays with her."
                     </p>
                     <p>
-                        - The Altamura Family
-                    </p>
-                </div>
-                <div class="card">
-                    <p>
-                        "Our dog Happy is pretty difficult to work with but loves staying with Lee. 
-                        Doesn't matter if its for a quick weekend or extended vacation, our minds 
-                        are always at ease when our dog stays with her."
-                    </p>
-                    <p>
-                        - The Altamura Family
+                        - Christian A. - December 2024
                     </p>
                 </div>
                 <div class="card">
                     <p>
-                        "Our dog Happy is pretty difficult to work with but loves staying with Lee. 
-                        Doesn't matter if its for a quick weekend or extended vacation, our minds 
-                        are always at ease when our dog stays with her."
+                        "One of the kindest, most honest and comforting people we have met! Lee was INCREDIBLE with
+                        my dog Rosie who took to her and her husband so quickly. My family has never left their dog
+                        alone with anyone and was so nervous to leave her with someone but immediately felt comfortable
+                        when we met Lee. We received pictures and updates the whole time and the dog was relaxed and almost didnt want to leave!
+                        We will 1000% be leaving our pups with her in the future and can't recommend her more :) thanks again!"
                     </p>
                     <p>
-                        - The Altamura Family
+                        - Meghan A. - December 2024
+                    </p>
+                </div>
+                <div class="card">
+                    <p>
+                        "Lee was wodnerful with my pup. Whe was very accomodating and understandinng. My dog was well taken car of and happy.
+                        I received pictures ad videos often putting my mind at ease while I was away. I had no worries. She is definitely a car taker
+                        I would use again."
+                    </p>
+                    <p>
+                        - Savita R. - August 2024
+                    </p>
+                </div>
+                <div class="card">
+                    <p>
+                        "Lee too wonderful care of our dog, kept us updated. Would highly recommend her and will use her again!"
+                    </p>
+                    <p>
+                        - Connie P. - July 2024
                     </p>
                 </div>
 
@@ -134,8 +147,8 @@
                 Pricing
             </h3>
             <p class="pricing-subheading text-medium text-center">
-                Check below fot he details on her services. Her dates are reserved for your dog only. <br> 
-                No other dogs will be present to ensure everyone is happy and confortable.
+                Check below for details on services. In order to ensure everyone is happy
+                and confortable, dates are reserved for your dog(s) only.
             </p>
             <div class="pricing-grid">
                 <div class="card bg-light">
@@ -144,22 +157,24 @@
                             Meet & Greet
                         </h4>
                         <p class="pricing-card-subheading">
-                            A quick introduction session. Meet at Lee's house to get familiar with her and the environment.
+                            A quick introduction session. Meet at my house to get familiar with me and 
+                            the environment your pup will be staying in.
                         </p>
                         <p class="pricing-card-price">
                             <span class="text-xl">Free</span>
-                            /1 hour
+                            /30 Minutes
                         </p>
                     </div>
                     <div class="pricing-card-body">
                         <ul>
                             <li><i class="fas fa-plus"></i> Call to schedule</li>
                             <li><i class="fas fa-plus"></i> No commitment</li>
-                            <li><i class="fas fa-plus"></i> Meet Lee</li>
+                            <li><i class="fas fa-plus"></i> Meet me and my husband</li>
                             <li><i class="fas fa-plus"></i> See the home</li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="card bg-dark">
                     <div class="pricing-card-header">
                         <h4 class="pricing-heading text-xl">
@@ -182,14 +197,14 @@
                         </ul>
                     </div>
                 </div>
-    
+
                 <div class="card bg-dark">
                     <div class="pricing-card-header">
                         <h4 class="pricing-heading text-xl">
-                            2 Dogs
+                            1 Puppy (Under 1 year)
                         </h4>
                         <p class="pricing-card-subheading">
-                            She understands some dogs want to be together. She will watch both of your dogs for a discounted rate.
+                            The standard arragement for most owners. One to One care for your fluffy friend.
                         </p>
                         <p class="pricing-card-price">
                             <span class="text-xl">$75</span>
@@ -201,7 +216,53 @@
                             <li><i class="fas fa-plus"></i> Call to schedule</li>
                             <li><i class="fas fa-plus"></i> Custom dropoff & pickup</li>
                             <li><i class="fas fa-plus"></i> Calm environment</li>
-                            <li><i class="fas fa-plus"></i> Peace of mind</li>
+                            <li><i class="fas fa-plus"></i> Extra care and attention</li>
+                        </ul>
+                    </div>
+                </div>
+    
+                <div class="card bg-dark">
+                    <div class="pricing-card-header">
+                        <h4 class="pricing-heading text-xl">
+                            2 or more Dogs
+                        </h4>
+                        <p class="pricing-card-subheading">
+                            I understand some dogs want to be together. I will watch both (all) your dogs for a discounted rate.
+                        </p>
+                        <p class="pricing-card-price">
+                            <span class="text-xl">$25</span>
+                            /per day, per additional dog
+                        </p>
+                    </div>
+                    <div class="pricing-card-body">
+                        <ul>
+                            <li><i class="fas fa-plus"></i> Call to schedule</li>
+                            <li><i class="fas fa-plus"></i> Custom dropoff & pickup</li>
+                            <li><i class="fas fa-plus"></i> Calm environment</li>
+                            <li><i class="fas fa-plus"></i> Group rate</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card bg-dark">
+                    <div class="pricing-card-header">
+                        <h4 class="pricing-heading text-xl">
+                            Additional Puppy
+                        </h4>
+                        <p class="pricing-card-subheading">
+                            Considered on a case by case basis.
+                        </p>
+                        <p class="pricing-card-price">
+                            <span class="text-xl">$50</span>
+                            /additioal per
+                        </p>
+                    </div>
+                    <div class="pricing-card-body">
+                        <ul>
+                            <li><i class="fas fa-plus"></i> Call to schedule</li>
+                            <li><i class="fas fa-plus"></i> Custom dropoff & pickup</li>
+                            <li><i class="fas fa-plus"></i> Calm environment</li>
+                            <li><i class="fas fa-plus"></i> Special service</li>
                         </ul>
                     </div>
                 </div>
@@ -209,8 +270,7 @@
             </div>
         </div>
         <p class="pricing-footer text-center">
-            ***Any cancellations must be done 48 hours in advance. 
-            Multiple last minute cancellations may result a ban from her services.***
+            ***Any cancellations must be done 48 hours in advance.***
         </p>
         </div>
        </section>
@@ -264,7 +324,7 @@
                         <h4>Contact</h4>
                         <ul>
                             <li><a href="#footer">leemezza@verizon.net</a></li>
-                            <li><a href="#footer">(516)728-8540</a></li>
+                            <li><a href="#footer">(516) 728-8540</a></li>
                             <li><a href="https://www.facebook.com/lee.mezzasalma"><i class="fab fa-facebook"></i>Facebook</a></li>
                             <li><a href ="https://www.instagram.com/lee_mezza/"><i class="fab fa-instagram"></i>Instagram</a></li>
                         </ul>
