adding js and faq section

--- a/index.html
+++ b/index.html
@@ -269,11 +269,128 @@
             </div>
             </div>
         </div>
-        <p class="pricing-footer text-center">
-            ***Any cancellations must be done 48 hours in advance.***
-        </p>
         </div>
        </section>
+
+       <!-- FAQ -->
+        <section class="faq bg-light">
+            <div class="container-sm">
+                <h3 class="text-xl text-center">
+                    Frequently Asked Questions
+                </h3>
+                <ul class="faq-menu">
+                    <li class="active">All</li>
+                    <li>Getting Started</li>
+                    <li>Pricing</li>
+                </ul>
+
+                <div class="faq-content">
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">What are your Holiday rates?</h4>
+                            <i class="fas fa-minus"></i>
+                        </div>
+                        <div class="faq-group-body open">
+                            <p>
+                                I currently do not charge Holiday rates.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">Can we meet before booking your services?</h4>
+                            <i class="fas fa-plus"></i>
+                        </div>
+                        <div class="faq-group-body">
+                            <p>
+                                A meet and greet is required prior to the first booking. I want to make sure your dog(s) like and feel
+                                comfortable with me.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">How far in advance should I book?</h4>
+                            <i class="fas fa-plus"></i>
+                        </div>
+                        <div class="faq-group-body">
+                            <p>
+                                Because I only watch one family at a time, I get booked pretty far in advance, especially for school And
+                                holiday breaks. Please contact me as far in advance as possible. I will pencil you in until another family
+                                 requests the same time. At this point, you will be asked to commit and leave a deposit to secure the booking.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">How many dogs can you watch at once?</h4>
+                            <i class="fas fa-plus"></i>
+                        </div>
+                        <div class="faq-group-body">
+                            <p>
+                                Since I have no pets and only host one family at a time, I can host up to 4 dogs.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">What do I need to provide to you for overnight boarding?</h4>
+                            <i class="fas fa-plus"></i>
+                        </div>
+                        <div class="faq-group-body">
+                            <p>
+                                You will provide enough food for your dog(s) entire stay. Please bring a harness/collar or leash for each dog.
+                                 Any sweaters/jackets for cold weather, if needed. I do have dog beds, blankets, and a dog create and food bowls,
+                                 but you are welcome to bring their own if that makes them more comfortable.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">What is your cancellation policy?</h4>
+                            <i class="fas fa-plus"></i>
+                        </div>
+                        <div class="faq-group-body">
+                            <p>
+                                I am flexible with cancellations, up to 2 days prior to drop off date. Less than 48 hours will result in forfeit of deposit
+                                since I had to turn away other families during those booked dates.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">Why does it cost more for a puppy?</h4>
+                            <i class="fas fa-plus"></i>
+                        </div>
+                        <div class="faq-group-body">
+                            <p>
+                                Puppies require a lot more love and care, frequent potty breaks, and tend to have frequent accidents in the house.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">Who else is in your hosuehold that my dog(s) would be staying with?</h4>
+                            <i class="fas fa-plus"></i>
+                        </div>
+                        <div class="faq-group-body">
+                            <p>
+                                My husband Tommy, who is also retired, and myself are the only people in the home. He loves dogs also and
+                                they always love him back. No young children visit and we refrain from having visitors when dog(s) are visiting.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
        <!--Contact Form-->
        <section class="contact" id="contact">
