adding cleanup of css and additional QOL adjustments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logoedit.png" alt="logo">
+                    <img src="images/forthelove.jpg" alt="logo">
                 </a>
             </div>
             <div class="main-menu">
@@ -87,6 +87,60 @@
         </div>
      </section>
 
+     <!-- Photo Gallery -->
+        <section class="photo-gallery" id="gallery">
+            <div class="container">
+                <h2 class="text-xl text-center">My Pawesome Pals!</h2>
+                <p class="text-center">Here are some of the wonderful dogs I've had the pleasure of caring for.</p>
+                
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <img src="images/dog1.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog2.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog3.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog4.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog5.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog6.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog7.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog8.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog9.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog10.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog11.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog12.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog13.jpeg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog14.jpeg" alt="" class="gallery-img">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
      <!-- Testimonials -->
       <section class="testimonials bg-dark" id="testimonials">
         <div class="container">
@@ -102,7 +156,7 @@
                         our minds are always at ease when our dog stays with her."
                     </p>
                     <p>
-                        - Christian A. - December 2024
+                        - Christian A. in December 2024
                     </p>
                 </div>
                 <div class="card">
@@ -110,11 +164,10 @@
                         "One of the kindest, most honest and comforting people we have met! Lee was INCREDIBLE with
                         my dog Rosie who took to her and her husband so quickly. My family has never left their dog
                         alone with anyone and was so nervous to leave her with someone but immediately felt comfortable
-                        when we met Lee. We received pictures and updates the whole time and the dog was relaxed and almost didnt want to leave!
-                        We will 1000% be leaving our pups with her in the future and can't recommend her more :) thanks again!"
+                        when we met Lee. We will 1000% be leaving our pups with her in the future and can't recommend her more :) thanks again!"
                     </p>
                     <p>
-                        - Meghan A. - December 2024
+                        - Meghan A. in December 2024
                     </p>
                 </div>
                 <div class="card">
@@ -124,7 +177,7 @@
                         I would use again."
                     </p>
                     <p>
-                        - Savita R. - August 2024
+                        - Savita R. in August 2024
                     </p>
                 </div>
                 <div class="card">
@@ -132,7 +185,7 @@
                         "Lee too wonderful care of our dog, kept us updated. Would highly recommend her and will use her again!"
                     </p>
                     <p>
-                        - Connie P. - July 2024
+                        - Connie P. in July 2024
                     </p>
                 </div>
 
@@ -201,7 +254,7 @@
                 <div class="card bg-dark">
                     <div class="pricing-card-header">
                         <h4 class="pricing-heading text-xl">
-                            1 Puppy (Under 1 year)
+                            1 Puppy<br>(Under 1 year)
                         </h4>
                         <p class="pricing-card-subheading">
                             The standard arragement for most owners. One to One care for your fluffy friend.
@@ -254,7 +307,7 @@
                         </p>
                         <p class="pricing-card-price">
                             <span class="text-xl">$50</span>
-                            /additioal per
+                            /per day, per additional pup
                         </p>
                     </div>
                     <div class="pricing-card-body">
@@ -272,25 +325,46 @@
         </div>
        </section>
 
+       <!-- Features Section -->
+        <section class="features" id="features">
+            <div class="container">
+                <h2 class="text-xl text-center">Why Choose Me?</h2>
+                <div class="features-grid">
+                    <div class="feature-item">
+                        <i class="fas fa-child feature-icon"></i>
+                        <h3>No Children Present</h3>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-tree feature-icon"></i>
+                        <h3>Has a Fenced in Yard</h3>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-clock feature-icon"></i>
+                        <h3>Potty Breaks Often</h3>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-smoking-ban feature-icon"></i>
+                        <h3>Non Smoking Home</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
        <!-- FAQ -->
         <section class="faq bg-light">
             <div class="container-sm">
                 <h3 class="text-xl text-center">
                     Frequently Asked Questions
                 </h3>
-                <ul class="faq-menu">
-                    <li class="active">All</li>
-                    <li>Getting Started</li>
-                    <li>Pricing</li>
-                </ul>
 
                 <div class="faq-content">
                     <div class="faq-group">
                         <div class="faq-group-header">
                             <h4 class="text-md">What are your Holiday rates?</h4>
-                            <i class="fas fa-minus"></i>
+                            <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body open">
+                        <div class="faq-group-body">
                             <p>
                                 I currently do not charge Holiday rates.
                             </p>
@@ -417,13 +491,14 @@
                 <div class="footer-grid">
                     <div class="footer-logo">
                         <div class="card">
-                            <h4>Subscribe to my newsletter!</h4>
+                            <h4>Want to leave me a review?</h4>
                             <p class="text-sm">
-                                Want your dog featured in my weekly updates? Let me brag for you!
+                                I always want to hear what I did well and what I can do better. Leave me a submission here and if you want me to use it as a testimonial let me know!
                             </p>
-                            <form>
-                                <input type="email" id="email" placeholder="Enter your email">
-                                <button type="submit" class="btn btn-primary btn-block">Email</button>
+                            <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form bg-light">
+                                <label for="message">Message:</label>
+                                <textarea name="message" id="message" placeholder="Enter your message here." rows="4"></textarea>
+                                <button type="submit" class="btn btn-primary btn-block">Send Email</button>
                             </form>
                         </div>
                     </div>
