removing old photo data and changing capitalization of files for compatability

--- a/index.html
+++ b/index.html
@@ -495,8 +495,7 @@
                             <p class="text-sm">
                                 I always want to hear what I did well and what I can do better. Leave me a submission here and if you want me to use it as a testimonial let me know!
                             </p>
-                            <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form bg-light">
-                                <label for="message">Message:</label>
+                            <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form">
                                 <textarea name="message" id="message" placeholder="Enter your message here." rows="4"></textarea>
                                 <button type="submit" class="btn btn-primary btn-block">Send Email</button>
                             </form>
