renaming files because other changes didnt register

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/forthelove.jpg" alt="logo">
+                    <img src="images/ftlheader.jpg" alt="logo">
                 </a>
             </div>
             <div class="main-menu">
@@ -95,46 +95,46 @@
                 
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="images/dog1.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog1.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog2.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog2.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog3.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog3.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog4.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog4.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog5.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog5.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog6.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog6.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog7.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog7.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog8.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog8.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog9.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog9.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog10.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog10.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog11.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog11.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog12.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog12.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog13.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog13.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/dog14.jpeg" alt="" class="gallery-img">
+                        <img src="images/dog14.jpg" alt="" class="gallery-img">
                     </div>
                 </div>
             </div>
