typos and adjustments

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     My Story...
                 </h1>
                 <p class="hero-text">
-                    I have loved and owned dogs all my life. In 2024, I lost my beloved Tito, a rescue, wh I loved for over 12 years.
+                    I have loved and owned dogs all my life. In 2024, I lost my beloved Tito, a rescue, who I loved for over 12 years.
                     I retired in October 2024, alone with my husband. Since we are planning on travelling over the next few years, we have decided not to adopt
                     another pet at the moment. However, we both miss having a dog to love, cuddle, and play with. What started out as watching a friend's pups while she
                     was away, grew into a small business.
@@ -75,7 +75,7 @@
         </div>
      </section>
 
-     <!-- calendar -->
+     <!-- Calendar -->
      <section class="calendar bg-black" id="availability">
         <div class="container-sm">
             <h2 class="calendar-heading text-xl text-center">
@@ -497,7 +497,7 @@
                             </p>
                             <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form">
                                 <textarea name="message" id="message" placeholder="Enter your message here." rows="4"></textarea>
-                                <button type="submit" class="btn btn-primary btn-block">Send Email</button>
+                                <button type="submit" class="btn btn-primary btn-block">Submit Review</button>
                             </form>
                         </div>
                     </div>
