adding mobile menu and settings with js

--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
                     </li>
                 </ul>
             </div>
+            <!--Hamburger Button-->
+            <button class="hamburger-button">
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+            </button>
+            <div class="mobile-menu">
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#availability">Availability</a>
+                    </li>
+                    <li>
+                        <a href="#testimonials">Reviews</a>
+                    </li>
+                    <li>
+                        <a href="#pricing">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#footer">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
